<resources>
    <string name="app_name">PhotoApp</string>
    <string name="filter_prompt">Filter</string>
    <string name="settings_prompt">Settings</string>
    <string name="tag_by_location_prompt">Save by Location</string>
    <string name="tag_by_date_prompt">Save by Date</string>
    <string name="how_to_save_text">How would you like to save this image?</string>
    <string name="confirm_date_prompt">Please confirm the date</string>
    <string name="ok_button_prompt">OK</string>
    <string name="cancel_button_prompt">Cancel</string>
    <string name="lat_label">Latitude: </string>
    <string name="long_label">Longitude: </string>
    <string name="delete_image_prompt">Are you sure you want to delete this image?</string>
    <string name="delete_prompt">Delete</string>
    <string name="filter_by_date_prompt">Filter by Date</string>
    <string name="filter_by_location_prompt">Filter by Location</string>
    <string name="filter_by_caption_prompt">Filter by Caption</string>
    <string name="date_starting_filter">Date From</string>
    <string name="date_ending_filter">Date To</string>
    <string name="format_prompt">(YYYY-MM-DD)</string>
    <string name="app_id">photoapp-1497130284312</string>
    <string name="nearest_city_label">City of: </string>
    <string name="write_caption_prompt">How would you like to caption your picture?</string>
    <string name="caption_prompt">Caption</string>
    <string name="filter_by_keyword_prompt">What keyword would you like to filter the caption by?</string>
</resources>
