<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.manish.photoapp.Activities.LocationTag">


    <TextView
        android:id="@+id/lat_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:text="@string/lat_label"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/long_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/long_label"
        android:layout_below="@+id/lat_prompt"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/show_lat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/long_prompt"
        android:layout_marginStart="55dp"
        android:layout_toEndOf="@+id/lat_prompt" />

    <TextView
        android:id="@+id/show_long"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/long_prompt"
        android:layout_alignEnd="@+id/show_lat" />

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.MapFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/long_prompt"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/long_prompt"
        android:layout_above="@+id/button2" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel_button_prompt"
        android:layout_alignParentBottom="true"
        android:layout_toStartOf="@+id/button3"
        android:layout_marginEnd="41dp"
        android:onClick="closePage" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok_button_prompt"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:onClick="saveEntryToDb"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nearest_city_label"
        android:layout_above="@+id/show_lat"
        android:layout_alignStart="@+id/show_city" />

    <TextView
        android:id="@+id/show_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/show_lat"
        android:layout_alignStart="@+id/button3"
        android:layout_above="@+id/show_long"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
