<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="14dp"
        android:layout_marginTop="30dp"
        android:text="@string/filter_by_keyword_prompt" />

    <EditText
        android:id="@+id/keyword_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView6"
        android:layout_below="@+id/textView6"
        android:layout_marginTop="18dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_alignEnd="@+id/textView6" />

    <Button
        android:id="@+id/caption_filter_ok_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/keyword_text"
        android:layout_below="@+id/keyword_text"
        android:layout_marginTop="27dp"
        android:text="@string/ok_button_prompt" />

    <Button
        android:id="@+id/caption_filter_cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/caption_filter_ok_button"
        android:layout_marginEnd="60dp"
        android:layout_toStartOf="@+id/caption_filter_ok_button"
        android:text="@string/cancel_button_prompt" />
</RelativeLayout>